{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 101,
  "lineage": "43971151-f252-6c6b-2a54-6b1d82171d4f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-043f7d91bebb8a614",
            "arn": "arn:aws:ec2:ap-northeast-2:342934375778:elastic-ip/eipalloc-043f7d91bebb8a614",
            "association_id": "eipassoc-0747e5c206f31bba4",
            "domain": "vpc",
            "id": "eipalloc-043f7d91bebb8a614",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-0f8d303db9c880a65",
            "private_dns": "ip-10-0-1-35.ap-northeast-2.compute.internal",
            "private_ip": "10.0.1.35",
            "public_dns": "ec2-43-200-153-60.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "43.200.153.60",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:342934375778:internet-gateway/igw-0fc000f81af9d89b8",
            "id": "igw-0fc000f81af9d89b8",
            "owner_id": "342934375778",
            "tags": {
              "Name": "security-Internet-Gateway"
            },
            "tags_all": {
              "Name": "security-Internet-Gateway"
            },
            "vpc_id": "vpc-00963edc3ade5e209"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-043f7d91bebb8a614",
            "association_id": "eipassoc-0747e5c206f31bba4",
            "connectivity_type": "public",
            "id": "nat-0109be6d64dbfb3f6",
            "network_interface_id": "eni-0f8d303db9c880a65",
            "private_ip": "10.0.1.35",
            "public_ip": "43.200.153.60",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0cf9be070556718a4",
            "tags": {
              "Name": "Security-Nat-gateway"
            },
            "tags_all": {
              "Name": "Security-Nat-gateway"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.main",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:342934375778:route-table/rtb-0225c203adaa97a9a",
            "id": "rtb-0225c203adaa97a9a",
            "owner_id": "342934375778",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fc000f81af9d89b8",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Security-route-table"
            },
            "tags_all": {
              "Name": "Security-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-00963edc3ade5e209"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:342934375778:route-table/rtb-0f68da21d4cb609cc",
            "id": "rtb-0f68da21d4cb609cc",
            "owner_id": "342934375778",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0109be6d64dbfb3f6",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Security-route-private-subnet"
            },
            "tags_all": {
              "Name": "Security-route-private-subnet"
            },
            "timeouts": null,
            "vpc_id": "vpc-00963edc3ade5e209"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.main",
            "aws_nat_gateway.nat",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-021853543bf778c24",
            "route_table_id": "rtb-0f68da21d4cb609cc",
            "subnet_id": "subnet-0d5297ca3c72204fb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.main",
            "aws_nat_gateway.nat",
            "aws_route_table.route_private",
            "aws_subnet.private_1",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet_1_pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-004a96b63d117c9a1",
            "route_table_id": "rtb-0225c203adaa97a9a",
            "subnet_id": "subnet-0cf9be070556718a4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.Public",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet_2_pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0521b0c0fc91b2f88",
            "route_table_id": "rtb-0225c203adaa97a9a",
            "subnet_id": "subnet-0ed3bcca6fdccdcd5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.Public",
            "aws_subnet.public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:342934375778:subnet/subnet-0d5297ca3c72204fb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d5297ca3c72204fb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "342934375778",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "security-platform-private-1"
            },
            "tags_all": {
              "Name": "security-platform-private-1"
            },
            "vpc_id": "vpc-00963edc3ade5e209"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:342934375778:subnet/subnet-0cf9be070556718a4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cf9be070556718a4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "342934375778",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "security-platform-public-1"
            },
            "tags_all": {
              "Name": "security-platform-public-1"
            },
            "vpc_id": "vpc-00963edc3ade5e209"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:342934375778:subnet/subnet-0ed3bcca6fdccdcd5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ed3bcca6fdccdcd5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "342934375778",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "security-platform-public-2"
            },
            "tags_all": {
              "Name": "security-platform-public-2"
            },
            "vpc_id": "vpc-00963edc3ade5e209"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:342934375778:vpc/vpc-00963edc3ade5e209",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03827cf7fca5af7a6",
            "default_route_table_id": "rtb-04beb306ab8a4e018",
            "default_security_group_id": "sg-021b2d9916ba10758",
            "dhcp_options_id": "dopt-020175a363043758e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00963edc3ade5e209",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04beb306ab8a4e018",
            "owner_id": "342934375778",
            "tags": {
              "Name": "security-platform-vpc"
            },
            "tags_all": {
              "Name": "security-platform-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}